# log_mel_spectrogram

./: .gitignore  CMakeLists.txt  README.md  compile_cpp_clr.bat
inc/: csharp_binding.hpp  log_mel_spectrogram.hpp
src/: log_mel_spectrogram.cpp  pybind11_binding.cpp
test/csharp/: LogMelSpectrogramCS.csproj  LogMelSpectrogramCS.nuspec  Program.cs  cs_README.md
test/python/: whisper_test.py
